@@ -1,6 +1,9 @@
 # ChangeLog file for clients
 # This file is updated with Maddlog
 
+* Wed Dec  8 2010 Fabian Groffen <fabian@cwi.nl>
+- Added support for \dn to list schemas or describe a specific one
+
 * Thu Nov 25 2010 Fabian Groffen <fabian@cwi.nl>
 - Added support for \df to list functions or describe a specific one
 - Added support for \ds to list sequences or describe a specific one
